--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const makeTitle = title
   : "Same Day Appliance Repair Services";
 ---
 
-<!doctype html>
+<!octype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -128,7 +128,7 @@ const makeTitle = title
   <body>
     <slot />
 
-    <Footer />
+    <!-- <Footer /> -->
 
     <style is:global>
       .H9lube img {
