--- a/src/css/price/style_price.css
+++ b/src/css/price/style_price.css
@@ -114,7 +114,7 @@ main {
 .max-w-screen-xl {
   width: 100%;
   max-width: 1920px !important;
-  padding: 0% 10px 0% 10px;
+  padding: 0% 10% 0% 10%;
 }
 
 
