--- a/src/components/css-components/style-header.css
+++ b/src/components/css-components/style-header.css
@@ -213,3 +213,10 @@ body {
         margin-top: 90px;
     }
 }
+
+@media (max-width:533px) {
+    body {
+            margin-top: 110px;
+        
+        }
+    }
