--- a/src/css/style-index.css
+++ b/src/css/style-index.css
@@ -34,17 +34,89 @@
     width: 100%;
     max-width: 1920px;
     margin: 0 auto;
+    padding: 2% 3%;
 }
 
 .header-machinery {
     text-align: center;
 }
 
+.full-conteiner-machinery {
+    width: 100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    grid-gap: 2em;
+}
 
+.content-machinery {
+    display: grid;
+    justify-self: center;
+    border-radius: 7px;
+    padding: 10px 8px;
+    width: 260px;
+    grid-gap: 0.8em;
+}
 
+.f-content-machinery {
+    max-width: 140px;
+    min-height: 150px;
+    justify-self: center;
+    align-self: center;
+}
 
+.f-content-machinery img {
+    width: 100%;
+    transition: 0.25s;
+    transform: scale(1, 1);
+}
 
+.content-machinery:hover .f-content-machinery img {
+    transform: scale(1.1, 1.1);
+}
 
+.d-content-machinery {
+    width: 100%;
+    display: grid;
+    min-height: 50px;
+}
+
+.d-content-machinery p {
+    justify-self: center;
+    align-self: center;
+    font-size: 20px;
+    line-height: 24px;
+    font-weight: 600;
+    text-shadow: 0.6px 0.6px 1.2px rgb(102, 102, 102);
+    margin: 0;
+}
+
+.but-content-machinery {
+    display: grid;
+    justify-self: center;
+    align-self: center;
+    width: 70%;
+    background-color: #000;
+    border: solid 1.5px #000;
+    border-radius: 5px;
+    box-shadow: inset 0px 2px 4px -1px rgb(0 0 0 / 20%), 0px 4px 5px 0px rgb(0 0 0 / 14%), 0px 1px 10px 0px rgb(0 0 0 / 12%);
+    cursor: pointer;
+    transition: 0.25s;
+}
+
+.but-content-machinery:hover {
+    background-color: #ca0913 !important;
+}
+
+.but-content-machinery a {
+    justify-self: center;
+    align-self: center;
+    font-size: 22px;
+    font-weight: 500;
+    color: #fff;
+    padding: 6px 33px;
+    text-shadow: 1.2px 1.2px 2px black;
+}
 
 
 
