--- a/src/components/css-components/style-header.css
+++ b/src/components/css-components/style-header.css
@@ -9,6 +9,11 @@
     box-sizing: border-box;
 }
 
+html {
+    scroll-behavior: auto;
+    scroll-behavior: smooth;
+}
+
 .max-w-screen-xl {
     width: 100%;
     max-width: 100%;
@@ -37,6 +42,14 @@
     width: 100%;
     background-color: #000;
     z-index: 2000;
+}
+
+@media (min-width: 900px) {
+.inside-reviews_header-full {
+        /* overflow-y: scroll;
+        height: 100% !important; */
+    }
+
 }
 
 
@@ -217,21 +230,21 @@ body {
 
 @media (max-width:533px) {
     body {
-            margin-top: 110px;
-        
-        }
+        margin-top: 110px;
+
+    }
+}
+
+@media (max-width:400px) {
+    .hover\:bg-gray-200 {
+        padding: 9px 4px !important;
+        width: 216px !important;
     }
 
-        @media (max-width:400px) {
-            .hover\:bg-gray-200 {
-                    padding: 9px 4px !important;
-                    width: 216px !important;
-                }
+    .gap-4 button {
+        max-width: 75px !important;
+        padding: 12px 17px !important;
+        justify-content: center !important;
+    }
 
-            .gap-4 button {
-                max-width: 75px !important;
-                padding: 12px 17px !important;
-                justify-content: center !important;
-            }
-
-        }
+}
