--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -89,7 +89,7 @@ const menuitems = [
 ---
 
 <!-- скрипт при открытом мобильном меню  -->
-<script defer>
+<!-- <script defer>
   document.addEventListener("DOMContentLoaded", function () {
     const nav = document.querySelector(".astronav-items");
     const insideHeaderFull = document.querySelector(".inside_header-full");
@@ -103,64 +103,84 @@ const menuitems = [
     }
     nav.addEventListener("transitionend", toggleInsideHeaderDisplay);
   });
-</script>
+</script> -->
 
 <Layout>
-
-<Container>
-  <header
-    class="flex flex-col lg:flex-row justify-between items-center my-5 header-full">
-    <div class="inside-reviews_header-full">
-      <div class="inside_header-full">
-        <Astronav>
-          <div class="flex w-full lg:w-auto items-center justify-between">
-            <a href="/" class="text-lg"
-              ><span
-                class="font-bold text-slate-800"
-                style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-                >SAME DAY APPLIANCE REAPAIR</span
-              ><span class="text-slate-500"></span>
-            </a>
-            <div class="block lg:hidden">
-              <MenuIcon class="w-4 h-4 text-gray-800" />
+  <Container>
+    <header
+      class="flex flex-col lg:flex-row justify-between items-center my-5 header-full">
+      <div class="inside-reviews_header-full">
+        <div class="inside_header-full">
+          <Astronav>
+            <div class="flex w-full lg:w-auto items-center justify-between">
+              <a href="/" class="text-lg"
+                ><span
+                  class="font-bold text-slate-800"
+                  style="font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
+                  >SAME DAY APPLIANCE REAPAIR</span
+                ><span class="text-slate-500"></span>
+              </a>
+              <div class="block lg:hidden">
+                <MenuIcon class="w-4 h-4 text-gray-800" />
+              </div>
             </div>
-          </div>
-          <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
-            <ul class="flex flex-col lg:flex-row lg:gap-3">
-              {
-                menuitems.map((item, index) => (
-                  <>
-                    {item.children && (
-                      <Dropdown
-                        title={item.title}
-                        children={item.children}
-                        lastItem={index === menuitems.length - 1}
-                      />
-                    )}
+            <MenuItems class="hidden w-full lg:w-auto mt-2 lg:flex lg:mt-0">
+              <ul class="flex flex-col lg:flex-row lg:gap-3">
+                {
+                  menuitems.map((item, index) => (
+                    <>
+                      {item.children && (
+                        <Dropdown
+                          title={item.title}
+                          children={item.children}
+                          lastItem={index === menuitems.length - 1}
+                        />
+                      )}
 
-                    {!item.children && (
-                      <li>
-                        <a
-                          href={item.path}
-                          class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
-                          <span> {item.title}</span>
-                          {item.badge && (
-                            <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
-                              New
-                            </span>
-                          )}
-                        </a>
-                      </li>
-                    )}
-                  </>
-                ))
-              }
-            </ul>
-            <div class="lg:hidden flex items-center mt-3 gap-4">
-              <Link href="tel:+14243250520" style="muted" block size="md"
-                >CALL US: (424) 325-0520</Link
-              >
+                      {!item.children && (
+                        <li>
+                          <a
+                            href={item.path}
+                            class="flex lg:px-3 py-2 items-center text-gray-600 hover:text-gray-900">
+                            <span> {item.title}</span>
+                            {item.badge && (
+                              <span class="ml-1 px-2 py-0.5 text-[10px] animate-pulse font-semibold uppercase text-white bg-indigo-600 rounded-full">
+                                New
+                              </span>
+                            )}
+                          </a>
+                        </li>
+                      )}
+                    </>
+                  ))
+                }
+              </ul>
+              <div class="lg:hidden flex items-center mt-3 gap-4">
+                <Link href="tel:+14243250520" style="muted" block size="md"
+                  >CALL US: (424) 325-0520</Link
+                >
 
+                <!--Start of Housecallpro Online booking button-->
+                <button
+                  data-token="9e68ce292ba246dbba0fe928b98791f7"
+                  data-orgname="Same-Day-Appliance-Repair"
+                  class="hcp-button"
+                  onClick="HCPWidget.openModal()">
+                  Book
+                </button>
+                <script
+                  async
+                  src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
+                ></script>
+                <!--End of Housecallpro Online booking button-->
+              </div>
+            </MenuItems>
+          </Astronav>
+          <div>
+            <div class="hidden lg:flex items-center gap-4">
+              <div class="call-header">
+                <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
+              </div>
               <!--Start of Housecallpro Online booking button-->
               <button
                 data-token="9e68ce292ba246dbba0fe928b98791f7"
@@ -175,41 +195,19 @@ const menuitems = [
               ></script>
               <!--End of Housecallpro Online booking button-->
             </div>
-          </MenuItems>
-        </Astronav>
-        <div>
-          <div class="hidden lg:flex items-center gap-4">
-            <div class="call-header">
-              <a href="tel:+14243250520">CALL US: (424) 325-0520</a>
-            </div>
-            <!--Start of Housecallpro Online booking button-->
-            <button
-              data-token="9e68ce292ba246dbba0fe928b98791f7"
-              data-orgname="Same-Day-Appliance-Repair"
-              class="hcp-button"
-              onClick="HCPWidget.openModal()">
-              Book
-            </button>
-            <script
-              async
-              src="https://online-booking.housecallpro.com/script.js?token=9e68ce292ba246dbba0fe928b98791f7&orgName=Same-Day-Appliance-Repair"
-            ></script>
-            <!--End of Housecallpro Online booking button-->
           </div>
         </div>
-      </div>
-      <div class="reviews">
-        <p>
-          <a href="#reviews"
-            ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong>
-            (Google Rating)<a
-              ><a href="#reviews">(Thumbtack Rating)<a></a></a>
+        <div class="reviews">
+          <p>
+            <a href="#reviews"
+              ><strong style="font-size: 17px"> Reviews ⭐⭐⭐⭐⭐ 5.0 </strong>
+              (Google Rating)<a
+                ><a href="#reviews">(Thumbtack Rating)<a></a></a>
+              </a>
             </a>
-          </a>
-        </p>
+          </p>
+        </div>
       </div>
-    </div>
-  </header>
-</Container>
-
+    </header>
+  </Container>
 </Layout>
