--- a/src/components/css-components/style-header.css
+++ b/src/components/css-components/style-header.css
@@ -18,7 +18,7 @@ html {
     width: 100%;
     max-width: 100%;
     /* background-color: #000; */
-    padding: 0;
+    /* padding: 0; */
 
 }
 
@@ -224,9 +224,6 @@ body {
 
 @media (max-width:1024px) {
 
-.header-full {
-        padding: 10px 10px 20px 10px;
-    }
 
         .mt-3 {
             margin: 10px 0;
