--- a/src/pages/areas/pasadena.astro
+++ b/src/pages/areas/pasadena.astro
@@ -8,6 +8,8 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Cta from "@components/cta.astro";
 import Navbar from "@components/navbar/navbar.astro";
+
+import "css/service-areas/style-service-areas.css";
 ---
 <Navbar />
 <Layout title="Same Day Appliance Repair Pasadena: (424) 325-0520">
