--- a/src/pages/areas/santa-monica.astro
+++ b/src/pages/areas/santa-monica.astro
@@ -6,6 +6,8 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+
+import "css/service-areas/style-service-areas.css";
 ---
 
 <Navbar />
@@ -94,19 +96,20 @@ import Navbar from "@components/navbar/navbar.astro";
       <p>&bull; Refrigerators</p>
       &bull; Freezers
     </div>
-    &bull; Ice Makers and Ice Machines</Container
-  >
-  &bull; Ovens</Layout
->
-&bull; Ranges &bull; Cook-Tops &bull; Dishwashers &bull; Washers &bull; Dryers &bull;
-Microwaves &bull; Garbage Disposals &bull; Wine Coolers &bull; BBQs &bull; and more!
-<h2>Appliance Brands We Repair:</h2>
-<p>&bull; Admiral</p>
-&bull; Amana &bull; Black & Decker &bull; Bosch &bull; Dacor &bull; Electrolux &bull;
-Fisher & Paykel &bull; Frigidaire &bull; Gaffers And Sattler &bull; General Electric/GE
-&bull; Jenn-Air &bull; Kenmore &bull; KitchenAid &bull; LG &bull; Maytag &bull; Miele
-&bull; Montgomery Ward &bull; O’Keefe & Merritt &bull; Samsung &bull; Sears &bull;
-Speed Queen &bull; Sub-Zero &bull; Tappan &bull; Thermador &bull; Traulsen &bull;
-Viking &bull; Westinghouse &bull; Whirlpool &bull; Wolf &bull; And Others!
+    &bull; Ice Makers and Ice Machines &bull; Ovens &bull; Ranges &bull; Cook-Tops
+    &bull; Dishwashers &bull; Washers &bull; Dryers &bull; Microwaves &bull; Garbage
+    Disposals &bull; Wine Coolers &bull; BBQs &bull; and more!
+    <h2>Appliance Brands We Repair:</h2>
+    <p>&bull; Admiral</p>
+    &bull; Amana &bull; Black & Decker &bull; Bosch &bull; Dacor &bull; Electrolux
+    &bull; Fisher & Paykel &bull; Frigidaire &bull; Gaffers And Sattler &bull; General
+    Electric/GE &bull; Jenn-Air &bull; Kenmore &bull; KitchenAid &bull; LG &bull;
+    Maytag &bull; Miele &bull; Montgomery Ward &bull; O’Keefe & Merritt &bull; Samsung
+    &bull; Sears &bull; Speed Queen &bull; Sub-Zero &bull; Tappan &bull; Thermador
+    &bull; Traulsen &bull; Viking &bull; Westinghouse &bull; Whirlpool &bull; Wolf
+    &bull; And Others!
 
-<Cta />
+    <Cta />
+  </Container>
+  </Layout
+>
