--- a/src/pages/brands/commercial-and-household.astro
+++ b/src/pages/brands/commercial-and-household.astro
@@ -6,6 +6,8 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+
+import "css/service/style_services.css";
 ---
 
 <Navbar />
@@ -38,61 +40,61 @@ import Navbar from "@components/navbar/navbar.astro";
       </div>
       &bull; KitchenAid
     </div>
-    &bull; Bosch</Container
-  >
-  &bull; Frigidaire</Layout
->
-&bull; Maytag &bull; Sub-Zero &bull; Subzero &bull; Kenmore &bull; General Electric
-&bull; GE &bull; LG &bull; Liebherr &bull; JennAir &bull; Dacor &bull; Thermador
-&bull; Fisher & Paykel &bull; Sub Zero &bull; Viking &bull; GE Monogram &bull; Monogram
-&bull; Beverage Air &bull; Beverage-Air &bull; Westlake &bull; Coldline &bull; Arctic
-Air &bull; KITMA &bull; U-Line &bull; Wilprep &bull; MoTak &bull; Koolmore &bull;
-Avantco &bull; Vevor &bull; Norpole &bull; Turbo Air &bull; Silver King &bull; Megali
-&bull; Everest &bull; SMAD &bull; Hoshizaki &bull; Blue Star &bull; Continental &bull;
-Cooler Depot &bull; SABA &bull; Premium LEVELLA &bull; Maxx Cold &bull; Forno &bull;
-Elite Kitchen Supply &bull; Whynter &bull; NewAir &bull; Summit Appliance &bull;
-Equator Advanced
+    &bull; Bosch &bull; Frigidaire &bull; Maytag &bull; Sub-Zero &bull; Subzero &bull;
+    Kenmore &bull; General Electric &bull; GE &bull; LG &bull; Liebherr &bull; JennAir
+    &bull; Dacor &bull; Thermador &bull; Fisher & Paykel &bull; Sub Zero &bull; Viking
+    &bull; GE Monogram &bull; Monogram &bull; Beverage Air &bull; Beverage-Air &bull;
+    Westlake &bull; Coldline &bull; Arctic Air &bull; KITMA &bull; U-Line &bull;
+    Wilprep &bull; MoTak &bull; Koolmore &bull; Avantco &bull; Vevor &bull; Norpole
+    &bull; Turbo Air &bull; Silver King &bull; Megali &bull; Everest &bull; SMAD
+    &bull; Hoshizaki &bull; Blue Star &bull; Continental &bull; Cooler Depot &bull;
+    SABA &bull; Premium LEVELLA &bull; Maxx Cold &bull; Forno &bull; Elite Kitchen
+    Supply &bull; Whynter &bull; NewAir &bull; Summit Appliance &bull; Equator Advanced
 
-<br />
-<div style="background-color:#c3defa; padding:25px; border-radius: 25px;">
-  <h2>
-    <h2>Quality Repairs for Lasting Solutions</h2>
-    <p>
-      We understand the importance of using genuine parts and employing the
-      right techniques for each brand's appliances. Our technicians are trained
-      to identify issues specific to each brand and provide tailored solutions
-      that ensure the longevity and optimal performance of your appliances.
-    </p>
+    <br />
+    <div style="background-color:#c3defa; padding:25px; border-radius: 25px;">
+      <h2>
+        <h2>Quality Repairs for Lasting Solutions</h2>
+        <p>
+          We understand the importance of using genuine parts and employing the
+          right techniques for each brand's appliances. Our technicians are
+          trained to identify issues specific to each brand and provide tailored
+          solutions that ensure the longevity and optimal performance of your
+          appliances.
+        </p>
 
-    <h2>Commercial Appliance Expertise</h2>
+        <h2>Commercial Appliance Expertise</h2>
 
-    <p>
-      For businesses in various industries, we offer specialized repair services
-      for commercial-grade appliances. Whether it's a restaurant, hotel, or any
-      other commercial establishment, we have the expertise to handle complex
-      appliance issues, minimizing downtime and ensuring smooth operations.
-    </p>
+        <p>
+          For businesses in various industries, we offer specialized repair
+          services for commercial-grade appliances. Whether it's a restaurant,
+          hotel, or any other commercial establishment, we have the expertise to
+          handle complex appliance issues, minimizing downtime and ensuring
+          smooth operations.
+        </p>
 
-    <h2>Household Appliance Repairs</h2>
+        <h2>Household Appliance Repairs</h2>
 
-    <p>
-      Our comprehensive household appliance repair services cover a wide range
-      of products commonly found in homes. Whether it's your kitchen, laundry
-      room, or any other part of your house, we can efficiently diagnose and
-      repair your household appliances to get them back to optimal working
-      condition.
-    </p>
+        <p>
+          Our comprehensive household appliance repair services cover a wide
+          range of products commonly found in homes. Whether it's your kitchen,
+          laundry room, or any other part of your house, we can efficiently
+          diagnose and repair your household appliances to get them back to
+          optimal working condition.
+        </p>
 
-    <h2>Contact Us for Expert Repairs</h2>
+        <h2>Contact Us for Expert Repairs</h2>
 
-    <p>
-      If you're experiencing issues with any of your commercial or household
-      appliances from the brands mentioned above or any other brand, reach out
-      to us today. Call us at [insert phone number] or use our online contact
-      form to schedule an appointment. Our dedicated team is committed to
-      providing top-notch repair services to ensure your appliances operate
-      seamlessly for years to come.
-    </p>
-  </h2>
-</div>
-<Cta />
+        <p>
+          If you're experiencing issues with any of your commercial or household
+          appliances from the brands mentioned above or any other brand, reach
+          out to us today. Call us at [insert phone number] or use our online
+          contact form to schedule an appointment. Our dedicated team is
+          committed to providing top-notch repair services to ensure your
+          appliances operate seamlessly for years to come.
+        </p>
+      </h2>
+    </div>
+    <Cta />
+  </Container>
+</Layout>
