--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,7 +22,7 @@ const makeTitle = title
   : "Same Day Appliance Repair Services";
 ---
 
-<!octype html>
+<!--octype html-->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
