--- a/src/pages/areas/los-angeles.astro
+++ b/src/pages/areas/los-angeles.astro
@@ -7,6 +7,8 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Contactbtn from "@components/contactbtn.astro";
 import Navbar from "@components/navbar/navbar.astro";
+
+import "css/service-areas/style-service-areas.css";
 ---
 <Navbar />
 <Layout title="Same Day Appliance Repair Los Angeles">
