--- a/src/pages/services/commercial-freezer-repair.astro
+++ b/src/pages/services/commercial-freezer-repair.astro
@@ -7,6 +7,7 @@ import Hero from "@components/hero.astro";
 import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
+import "css/service/style_services.css";
 ---
 
 <Navbar />
