--- a/src/pages/services/stove-repair.astro
+++ b/src/pages/services/stove-repair.astro
@@ -8,6 +8,7 @@ import Logos from "@components/logos.astro";
 import Layout from "@layouts/Layout.astro";
 import Navbar from "@components/navbar/navbar.astro";
 
+import "css/service/style_services.css";
 ---
 <Navbar />
 <Layout title="Same Day Stove Repair">
