--- a/src/components/css-components/style-hero.css
+++ b/src/components/css-components/style-hero.css
@@ -124,9 +124,18 @@ textarea {
 
 
 
+.was-validated :placeholder-shown:invalid~.empty-feedback {
+    display: block;
+    position: absolute;
+    margin-top: 0px;
+}
 
-
-
+.is-invalid,
+.was-validated :invalid {
+    border-color: #dc3545;
+    /* margin-bottom: 0px; */
+    margin-top: 6px;
+}
 
 
 /* стили которые были в файле, если ничего не введено в поле input */
@@ -216,10 +225,12 @@ textarea {
     position: relative;
     width: 100%;
     overflow: hidden;
+    height: 100%;
 }
 
 .slides {
     display: flex;
+    height: 100%;
     transition: transform 1s ease;
 }
 
