--- a/src/components/css-components/style-hero.css
+++ b/src/components/css-components/style-hero.css
@@ -127,6 +127,7 @@ textarea {
 
 .but-request-callback:hover button {
     color: black;
+    box-shadow: inset 0px 4px 6px 1px rgb(0 0 0 / 25%), 0px 6px 7px 0px rgb(0 0 0 / 11%), 0px 3px 11px 4px rgb(0 0 0 / 25%);
 }
 
 
