--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -178,9 +178,9 @@ import "components/css-components/style-hero.css";
           appliance repair services, that you can rely on with confidence.
         </p>
         <p>
-          We have helped thousands of customers, alleviating the stress that
-          comes when appliances malfunction. Our quick response time and
-          efficient work ethic form the cornerstone of our operational approach,
+          <!-- We have helped thousands of customers, alleviating the stress that
+          comes when appliances malfunction. -->
+          Our quick response time and efficient work ethic form the cornerstone of our operational approach,
           aiming to resolve your appliance issues promptly and proficiently.
         </p>
       </div>
