--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,19 +16,9 @@ import "css/style-index.css";
     <div class="full-index-1920">
       <Hero />
       <Features />
-      <div class="category category-0" style="background-color:#ffffff;">
+      <div class="category category-0">
         <div class="container">
-          <!--driving truck -->
-          <div class="loop-wrapper">
-            <div class="mountain"></div>
-            <div class="hill"></div>
-            <div class="tree"></div>
-            <div class="tree"></div>
-            <div class="tree"></div>
-            <div class="rock"></div>
-            <div class="truck"></div>
-            <div class="wheels"></div>
-          </div>
+          
           <!--End drivng truck -->
 
           <div
@@ -943,5 +933,6 @@ import "css/style-index.css";
         <Cta />
       </div>
     </div>
-  </div></Layout
+  </div>
+  </Layout
 >
